# CricketIQ

./: .dockerignore  .env.example  .gitignore  DATASET_COMPARISON.md  README.md  accuracy_improvement_brainstorm.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  walkthrough.md.resolved
CricketIQ/: .env.example  .gitignore  .pre-commit-config.yaml  CricketIQ_AI_Architecture.md  PITCH_README.md  README.md  cricketiq_architecture.excalidraw  docker-compose.airflow.yml  docker-compose.yml  mlflow_error.txt  project_presentation_report.md  pyproject.toml  requirements.txt  start_project.ps1  test_bias_fix.py  test_intent.py  test_langsmith.py  tmp_cols.json
CricketIQ/.github/workflows/: ci.yml
CricketIQ/airflow/: airflow.cfg
CricketIQ/artifacts/models/: experiment_summary.json
CricketIQ/configs/: config.yaml
CricketIQ/dags/: cricket_etl_dag.py
CricketIQ/dbt/: .user.yml  dbt_project.yml  profiles.yml
CricketIQ/dbt/seeds/: team_aliases.csv  venue_aliases.csv
CricketIQ/diagrams/: project_flow.excalidraw
CricketIQ/docker/: api.Dockerfile  dash.Dockerfile  mlflow.Dockerfile
CricketIQ/docs/planning/: panel_end_to_end_data_ml_chatbot_brief.md  project_plan.md
CricketIQ/docs/research/: accuracy_improvement_brainstorm.md  feature_engineering_notes.md
CricketIQ/scripts/: simulate_realtime_data.py
CricketIQ/src/: app.py  config.py  logger.py  requirements.txt
CricketIQ/src/agents/: sql_agent.py
CricketIQ/src/api/: main.py
CricketIQ/src/chat/: entity_extractor.py  intent_classifier.py
CricketIQ/src/dashboards/: eda_app.py  persona_app.py
CricketIQ/src/features/: build_training_dataset.py  data_preprocessing.py  feature_engineering.py
CricketIQ/src/genai/: __init__.py  chatbot_app.py  rag_context.py
CricketIQ/src/ingestion/: canonical_mappings.py  convert_new_json_to_csv.py  ingest_historical.py  ingest_live_json.py
CricketIQ/src/ml/: predictor.py
CricketIQ/src/models/: evaluate_models.py  mlflow_tracking.py  train_model.py  train_models.py
CricketIQ/src/monitoring/: drift_monitor.py  (+3 more)
CricketIQ/tests/: conftest.py  test_config.py  test_phase1_ingestion.py
(+132 files in other folders)
