[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricketiq"
version = "0.1.0"
description = "ICC Men's T20 outcome prediction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4.0",
  "pandas>=3.0.0",
  "scikit-learn>=1.8.0",
  "joblib>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cricketiq-features = "scripts.run_feature_engineering:main"
cricketiq-validate = "scripts.run_validation:main"
cricketiq-train = "scripts.run_training:main"
cricketiq-monitor = "scripts.run_monitoring:main"
