[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cricketiq"
version = "0.1.0"
description = "ICC Men's T20 World Cup 2026 match outcome prediction platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CricketIQ Team" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]           # handled by formatter
exclude = ["notebooks/", "dbt/", ".venv/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
exclude = ["notebooks/", "dbt/"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]

# ── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
